--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "eslider/spatialite": "^0.0.16"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.1"
+    "phpunit/phpunit": "*"
   },
   "license": "MIT",
   "authors": [
